# BitmapFile

./: .gitignore  CMakeLists.txt
src/: bitmap_file.cpp  bitmap_file.h
